# drjit-cpp-feedstock

./: README.md  conda-forge.yml
.azure-pipelines/: azure-pipelines-linux.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml
.ci_support/: linux_64_build_modecppc_compiler_version13c_stdlib_version2.17cuda_compiler_version12.6cxx_compiler_version13llvm_version18.yaml  linux_64_build_modecppc_compiler_version13c_stdlib_version2.17cuda_compiler_version12.6cxx_compiler_version13llvm_version19.yaml  linux_64_build_modecppc_compiler_version13c_stdlib_version2.17cuda_compiler_version12.6cxx_compiler_version13llvm_version20.yaml  linux_64_build_modecppc_compiler_version13c_stdlib_version2.17cuda_compiler_version12.6cxx_compiler_version13llvm_version21.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_version12.6cxx_compiler_version13llvm_version16.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_version12.6cxx_compiler_version13llvm_version17.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_version12.6cxx_compiler_version13llvm_version18.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_version12.6cxx_compiler_version13llvm_version19.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_version12.6cxx_compiler_version13llvm_version21.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_versionNonecxx_compiler_version13llvm_version16.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_versionNonecxx_compiler_version13llvm_version17.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_versionNonecxx_compiler_version13llvm_version18.yaml  linux_64_build_modecppc_compiler_version13cuda_compiler_versionNonecxx_compiler_version13llvm_version19.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_version12.9cxx_compiler_version14llvm_version18.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_version12.9cxx_compiler_version14llvm_version19.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_version12.9cxx_compiler_version14llvm_version20.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_version12.9cxx_compiler_version14llvm_version21.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_versionNonecxx_compiler_version14llvm_version18.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_versionNonecxx_compiler_version14llvm_version19.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_versionNonecxx_compiler_version14llvm_version20.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.17cuda_compiler_versionNonecxx_compiler_version14llvm_version21.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.28cuda_compiler_version13.0cxx_compiler_version14llvm_version17.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.28cuda_compiler_version13.0cxx_compiler_version14llvm_version18.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.28cuda_compiler_version13.0cxx_compiler_version14llvm_version19.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.28cuda_compiler_version13.0cxx_compiler_version14llvm_version20.yaml  linux_64_build_modecppc_compiler_version14c_stdlib_version2.28cuda_compiler_version13.0cxx_compiler_version14llvm_version21.yaml  linux_64_build_modecppc_compiler_version14cuda_compiler_version12.9cxx_compiler_version14llvm_version17.yaml  linux_64_build_modecppc_compiler_version14cuda_compiler_version12.9cxx_compiler_version14llvm_version18.yaml  linux_64_build_modecppc_compiler_version14cuda_compiler_version12.9cxx_compiler_version14llvm_version19.yaml  linux_64_build_modecppc_compiler_version14cuda_compiler_version12.9cxx_compiler_version14llvm_version20.yaml  linux_64_build_modecppc_compiler_version14cuda_compiler_versionNonecxx_compiler_version14llvm_version17.yaml  (+235 more)
recipe/: bld.bat  bld_cpp.bat  bld_py.bat  (+13 more)
recipe/tests/: CMakeLists.txt  half.cpp  half_smoke.cpp  jit_cuda.cpp  jit_llvm.cpp  test_relocatable_targets.cpp
(+17 files in other folders)
